--- a/package.json
+++ b/package.json
@@ -34,6 +34,8 @@
     "npm": ">=10.0.0"
   },
   "dependencies": {
+    "@sentry/node": "^7.107.0",
+    "@sentry/profiling-node": "^7.107.0",
     "fastify": "^4.26.2",
     "reflect-metadata": "^0.2.1",
     "tsyringe": "^4.8.0"
