--- a/package.json
+++ b/package.json
@@ -33,6 +33,11 @@
     "node": ">=20.0.0",
     "npm": ">=10.0.0"
   },
+  "dependencies": {
+    "fastify": "^4.26.2",
+    "reflect-metadata": "^0.2.1",
+    "tsyringe": "^4.8.0"
+  },
   "devDependencies": {
     "@tsconfig/node20": "^20.1.2",
     "@types/jest": "^29.5.12",
