--- a/tsconfig.json
+++ b/tsconfig.json
@@ -4,6 +4,7 @@
     "sourceMap": true,
     "outDir": "./dist/",
 
+    "strict": true,
     "experimentalDecorators": true,
     "emitDecoratorMetadata": true
   },
